--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,6 @@
-flask
-flask-cors
-mysql-connector-python
-pymysql
-python-dotenv
+Flask==2.3.4
+gunicorn==21.2.0
+Flask-Cors==3.0.10
+Flask-SQLAlchemy==3.0.5
+pymysql==1.1.1
+python-dotenv==1.0.0
