--- a/API/.env
+++ b/API/.env
@@ -1,5 +1,11 @@
-DB_HOST=localhost
+DB_HOST_LOCAL=localhost
+DB_USER_LOCAL=root
+DB_PASSWORD_LOCAL=admin
+DB_NAME_LOCAL=cafeteria
+DB_PORT_LOCAL=3306
+
+DB_HOST=hopper.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=admin
-DB_NAME=cafeteria
-DB_PORT=3306
+DB_PASSWORD=HFwETMIZNwsmUunBpIJgFVQNpdoZTWYG
+DB_NAME=railway
+DB_PORT=34227
