--- a/API/.env
+++ b/API/.env
@@ -4,8 +4,8 @@ DB_PASSWORD_LOCAL=admin
 DB_NAME_LOCAL=cafeteria
 DB_PORT_LOCAL=3306
 
-DB_HOST=hopper.proxy.rlwy.net
+DB_HOST=mysql.railway.internal
 DB_USER=root
 DB_PASSWORD=HFwETMIZNwsmUunBpIJgFVQNpdoZTWYG
 DB_NAME=railway
-DB_PORT=34227
+DB_PORT=3306
