--- a/cafeteria/pubspec.yaml
+++ b/cafeteria/pubspec.yaml
@@ -19,12 +19,14 @@ dependencies:
   flutter_masked_text2: ^0.9.0
   english_words: ^4.0.0
   provider: ^6.0.7
-  intl: ^0.18.1
+  intl: ^0.20.2
   qr_flutter: ^4.0.0
   http: any
-  mask_text_input_formatter: ^2.3.0
+  mask_text_input_formatter: ^2.5.0
   cached_network_image: ^3.2.3
   http_parser: ^4.0.2
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +35,10 @@ dev_dependencies:
   flutter_lints: ^6.0.0
 
 flutter:
+  fonts:
+    - family: NotoColorEmoji
+      fonts:
+        - asset: fonts/NotoColorEmoji.ttf
   uses-material-design: true
   assets:
     - assets/images/
